--- a/src/components/textbox/textbox.scss
+++ b/src/components/textbox/textbox.scss
@@ -37,6 +37,7 @@
     &.incognito {
         border: 0;
         border-bottom: 1px solid transparent;
+        padding: 2px 0;
 
         &:hover {
             cursor: pointer;
