refactor: optimize CSS

--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -17,6 +17,7 @@ $tt-white: #f6f6f8;
 
 $tt-accent-red: #a33b20;
 
+// borders
 $tt-borderlt: #eaeaea;
 
 // error colors
@@ -30,3 +31,4 @@ $warn-bground: #fcf8e3;
 
 // text
 $text-lt: #b2b2b2;
+$text-dark: #1a1a1a;
