--- a/src/components/dropdown-menu/dropdown-menu.scss
+++ b/src/components/dropdown-menu/dropdown-menu.scss
@@ -26,7 +26,7 @@
                 
                 &:hover {
                     background: $tt-primary-md;
-                    color: $tt-white;
+                    color: white;
                 }
             }
 
