feat(DropdownMenu): add danger option

--- a/src/components/dropdown-menu/dropdown-menu.scss
+++ b/src/components/dropdown-menu/dropdown-menu.scss
@@ -28,6 +28,13 @@
                     background: $tt-primary-md;
                     color: white;
                 }
+
+                &.danger {
+                    &:hover {
+                        background: $tt-accent-red;
+                        color: white;
+                    }
+                }
             }
 
             .icon {
