--- a/src/components/workspace-header/workspace-header.scss
+++ b/src/components/workspace-header/workspace-header.scss
@@ -1,3 +1,5 @@
+@import 'assets/styles/_variables';
+
 .workspace-header {
     background: white;
     box-shadow: 0 0 8px #aaa;
@@ -13,5 +15,13 @@
 
     #sidebar-trigger {
         display: none;
+    }
+}
+
+@media (max-width: $break-xs) {
+    .workspace-header {
+        #sidebar-trigger {
+            display: inline;
+        }
     }
 }
