feat(TaskListItem): add strikethrough on completion

--- a/src/components/task-list/task-list.scss
+++ b/src/components/task-list/task-list.scss
@@ -20,6 +20,13 @@
             }
         }
 
+        &.complete {
+            .task-title {
+                opacity: 0.5;
+                text-decoration: line-through;
+            }
+        }
+
         .icon {
             opacity: 0;
             padding: 5px;
