--- a/src/components/sidebar-module/sidebar-module.scss
+++ b/src/components/sidebar-module/sidebar-module.scss
@@ -1,7 +1,7 @@
 @import 'assets/styles/_variables';
 
 .sidebar-module {
-    padding: 30px 0 30px 15px;
+    padding: 30px 0 0 15px;
 
     ul {
         li {
